--- a/microservicecloud-config-dept-client.yml
+++ b/microservicecloud-config-dept-client.yml
@@ -11,8 +11,8 @@ spring:
     name: microservicecloud-config-dept-client
    datasource:
     type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: org.gjt.mm.mysql.Driver
-    url: jdbc:mysql://localhost:3306/cloudDB01
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://192.168.55.5:3306/clouddb3
     username: root
     password: 123456
     dbcp2:
