--- a/microservicecloud-config-dept-client.yml
+++ b/microservicecloud-config-dept-client.yml
@@ -12,7 +12,7 @@ spring:
    datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://192.168.55.5:3306/clouddb3
+    url: jdbc:mysql://192.168.55.5:3306/clouddb
     username: root
     password: 123456
     dbcp2:
